src/objects/Standard_Clause__c.object
<CustomObject>
    <description>Used to hold the variant clauses and special clauses used on the HPP/BTL new purchase/refinance offer letter</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clause_Name__c</fullName>
        <label>Clause Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clause_section__c</fullName>
        <label>Clause/section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.1 a</fullName>
                </value>
                <value>
                    <fullName>1.6</fullName>
                </value>
                <value>
                    <fullName>Paragraph 7</fullName>
                </value>
                <value>
                    <fullName>Paragraph 8</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>At the end of 5.2</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>Amortisation: Full warning</fullName>
                </value>
                <value>
                    <fullName>Amortisation: Partial/no warning</fullName>
                </value>
                <value>
                    <fullName>1.1 b</fullName>
                </value>
                <value>
                    <fullName>1.1 c</fullName>
                </value>
                <value>
                    <fullName>Important notice BTL</fullName>
                </value>
                <value>
                    <fullName>3.5 c</fullName>
                </value>
                <value>
                    <fullName>Important notice Staff</fullName>
                </value>
                <value>
                    <fullName>Staff condition 1</fullName>
                </value>
                <value>
                    <fullName>Staff condition 2</fullName>
                </value>
                <value>
                    <fullName>i</fullName>
                </value>
                <value>
                    <fullName>1.3.2</fullName>
                </value>
                <value>
                    <fullName>1.3.5</fullName>
                </value>
                <value>
                    <fullName>p</fullName>
                </value>
                <value>
                    <fullName>1.7</fullName>
                </value>
                <value>
                    <fullName>1.8</fullName>
                </value>
                <value>
                    <fullName>1.6 Refinance Fee Assist Panel</fullName>
                </value>
                <value>
                    <fullName>1.6 Refinance Fee Assist Non Panel</fullName>
                </value>
                <value>
                    <fullName>1.9</fullName>
                </value>
                <value>
                    <fullName>1.10</fullName>
                </value>
                <value>
                    <fullName>1.91</fullName>
                </value>
                <value>
                    <fullName>1.81</fullName>
                </value>
                <value>
                    <fullName>1.92</fullName>
                </value>
                <value>
                    <fullName>1.93</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Clause__c</fullName>
        <label>Standard Clause</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Panel</fullName>
                </value>
                <value>
                    <fullName>Non panel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Purchase</fullName>
                </value>
                <value>
                    <fullName>Refinancing</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>HPP</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
                <value>
                    <fullName>BTL Refinance</fullName>
                </value>
                <value>
                    <fullName>BTL Rent Only</fullName>
                </value>
                <value>
                    <fullName>All products for BTL and HPP excluding BRO</fullName>
                </value>
                <value>
                    <fullName>HPPP</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Non Staff</fullName>
                </value>
                <value>
                    <fullName>BTS</fullName>
                </value>
                <value>
                    <fullName>Refinancing Fee Assisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Standard Clause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Clause_section__c</columns>
        <columns>Type__c</columns>
        <columns>Type2__c</columns>
        <columns>Standard_Clause__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Standard Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Clause</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>